# poco_samples

./: CMakeLists.txt  README.md
assets/: launch-test.bat  launch.bat
assets/certificates/: readme.txt
assets/certificates/root_stuff/: root.crt  root.csr  root.key  root.p12  root.srl
assets/certificates/server_stuff/: server.crt  server.csr  server.key
assets/comodo/: comodo_crt.txt  localhost.csr  localhost.key  server101.mycloud.csr  server101.mycloud.key
assets/poster/: any.pem  rootcert.pem
assets/remoting/: readme.txt
cmake/: CompilerOptions.cmake
modules/_json/: CMakeLists.txt
modules/_json/bigvalue/: CMakeLists.txt
modules/_json/bigvalue/src/: main.cpp  pch.h
modules/_json/iterator/: CMakeLists.txt
modules/_libpocoemulator/: CMakeLists.txt
modules/_libpocoemulator/libpocoemulator/: CMakeLists.txt
modules/_libpocoemulator/libpocoemulator/include/libpocoemulator/Http/: Http.hpp  HttpClient.h  HttpSession.h  HttpTypes.h  HttpsSession.h
modules/_libpocoemulator/libpocoemulator/src/: pch.h  targetver.h
modules/_libpocoemulator/libpocoemulator/src/Http/: HttpClient.cpp  HttpSession.cpp  HttpsSession.cpp
modules/_osp/: CMakeLists.txt
modules/_osp/CustomBundleContainer/: CMakeLists.txt
modules/_osp/CustomBundleContainer/src/: CustomBundleContainer.cpp
modules/_osp/CustomBundleContainer/src/res/: CustomBundleContainer.properties
modules/_osp/RemotingClientContainer/: CMakeLists.txt
modules/_osp/RemotingClientContainer/src/: RemotingClientContainer.cpp  pch.h
modules/_osp/RemotingClientContainer/src/res/: RemotingClientContainer.properties
modules/_osp/RemotingServerContainer/: CMakeLists.txt
modules/_osp/RemotingServerContainer/src/: RemotingServerContainer.cpp
modules/_osp/RemotingServerContainer/src/res/: RemotingServerContainer.properties
modules/_osp/com.my.CustomBundleConsumer/: CMakeLists.txt
modules/_osp/com.my.CustomBundleConsumer/include/: CustomBundleConsumerActivator.h
modules/_osp/com.my.CustomBundleConsumer/src/: CustomBundleConsumerActivator.cpp  pch.h
modules/_osp/com.my.CustomBundleProvider/: CMakeLists.txt
modules/_osp/com.my.CustomBundleProvider/include/: CustomBundleProviderActivator.h  CustomBundleService.h  CustomBundleServiceImpl.h
modules/_osp/com.my.CustomBundleProvider/src/: CustomBundleProviderActivator.cpp  CustomBundleServiceImpl.cpp  pch.h
modules/_osp/com.my.CustomBundleProvider/src/res/: CustomBundleProvider.bndlspec.cmake  Version.rc.cmake
modules/_osp/com.my.RemotingClientBundle/: CMakeLists.txt
modules/_osp/com.my.RemotingClientBundle/include/: RemotingClientBundleActivator.h  RemotingClientBundleService.h  RemotingClientBundleServiceImpl.h
modules/_osp/com.my.RemotingClientBundle/src/: RemotingClientBundleActivator.cpp  RemotingClientBundleServiceImpl.cpp
modules/_osp/com.my.RemotingClientBundle/src/res/: RemotingClientBundle.bndlspec.cmake
modules/_osp/com.my.RemotingServerBundle/: CMakeLists.txt
modules/_osp/com.my.RemotingServerBundle/include/: RemotingServerBundleActivator.h  RemotingServerBundleService.h  RemotingServerBundleServiceImpl.h  RemotingService.h  Resource.h
modules/_osp/com.my.RemotingServerBundle/src/: RemotingServerBundleActivator.cpp  RemotingServerBundleServiceImpl.cpp  RemotingService.cpp  pch.h
modules/_osp/com.my.RemotingServerBundle/src/res/: RemotingServiceGen.xml
modules/_qt/: CMakeLists.txt
modules/_qt/qt-builder/: CMakeLists.txt
modules/_qt/qt-launcher/: CMakeLists.txt
modules/_qt/qt-launcher/include/: CmdApplication.h
modules/_qt/qt-launcher/src/: CmdApplication.cpp
modules/_remoting/: CMakeLists.txt
modules/_remoting/TimeServer/: CMakeLists.txt  RemoteGen.xml
modules/_remoting/TimeServer/include/: ConnectionHandler.h  ITimeService.h  LocationDataUnitDeserializer.h  LocationDataUnitSerializer.h  ScopedLog.h  ServerApp.h  TEventDeserializer.h  TimeService.h  TimeServiceEventDispatcher.h  TimeServiceImpl.h  TimeServiceRemoteObject.h  Types.h  WakeUpTask.h
modules/_remoting/TimeServer/src/: ServerApp.cpp  TimeService.cpp  TimeServiceEventDispatcher.cpp  TimeServiceImpl.cpp  TimeServiceRemoteObject.cpp  TimeServiceSkeleton.cpp  WakeUpTask.cpp  pch.h
modules/_remoting/TimeServer/wsdl/: TimeService.wsdl
modules/_thread/: CMakeLists.txt
modules/basic_event/: CMakeLists.txt
modules/code_signing/: CMakeLists.txt
modules/code_signing/res/: cert.p12
modules/code_signing/src/: main.cpp  pch.h
modules/converter/: CMakeLists.txt
modules/converter/src/: main.cpp  pch.h
modules/datetime/: CMakeLists.txt
modules/datetime/src/: Main.cpp  pch.h
modules/dell_warranty_request/: CMakeLists.txt
modules/dell_warranty_request/src/: main.cpp  pch.h
modules/ftp_client/: CMakeLists.txt
modules/host_entry/: CMakeLists.txt
modules/host_entry/src/: main.cpp  pch.h
modules/http_stream_factory/: CMakeLists.txt
modules/http_stream_factory/src/: main.cpp  pch.h
modules/https_server/: CMakeLists.txt
modules/https_server/include/: HTTPSServer.h  HandlerFactory.h  RedirectHandlerFactory.h  RedirectRequestHandler.h  RequestHandler.h
modules/https_server/src/: HTTPSServer.cpp  HandlerFactory.cpp  RedirectHandlerFactory.cpp  RedirectRequestHandler.cpp  RequestHandler.cpp  main.cpp  pch.h
modules/memory_managment/: CMakeLists.txt
modules/networkinterface/: CMakeLists.txt
modules/nobsod/: CMakeLists.txt
modules/nobsod/include/: NoBSoD.h  PnpUtilService.h  Service.h  ServiceNotification.h
modules/nobsod/src/: NoBSoD.cpp  PnpUtilService.cpp  Service.cpp  pch.h
modules/nobsod/src/res/: NoBSoD.properties  NullServer.rc.cmake
modules/notification-center/: CMakeLists.txt
modules/null-server/: CMakeLists.txt
modules/null-server/include/: NullServer.h
modules/null-server/src/: NullServer.cpp  pch.h
modules/optional/: CMakeLists.txt
modules/os-info/: CMakeLists.txt
modules/os_installdate/: CMakeLists.txt
modules/os_installdate/src/: main.cpp  pch.h
modules/random/: CMakeLists.txt
modules/registry/: CMakeLists.txt
modules/registry/src/: main.cpp  pch.h
modules/timer/: CMakeLists.txt
(+50 files in other folders)
